# hamster

./: Makefile.am  autogen.sh  configure.ac
src/: Makefile.am  hamster_client.c  hamster_client_fcgi.c  main.c  udpserver.c
